--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -11,5 +11,8 @@
          <span class="close" (click)="delete(data)">X</span>
       </li>
     </ul>
+
   </div>
+
 </div>
+<button (click)="logout()">Logout</button>
