--- a/src/app/todo/todo.component.css
+++ b/src/app/todo/todo.component.css
@@ -75,3 +75,11 @@ h1, h2,h3,h4{
   border-radius: 10%;
   cursor: pointer;
 }
+button {
+  display: block;
+  color:rgb(19, 18, 18);
+  float:right;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
