--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -15,4 +15,4 @@
   </div>
 
 </div>
-<button class="button" (click)="logout()">Logout</button>
+<button class="butclick" (click)="logout()">Logout</button>
